@@ -1,3 +1,7 @@
+2008-07-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gfile.c: Small documentation fixes.
+
 2008-07-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gunixmounts.c: Use g_strcmp0 instead of rolling our own.
